2005-12-02  Tom Tromey  <tromey@redhat.com>

	* javax/naming/directory/InitialDirContext.java (search): Genericized.
	* javax/naming/directory/BasicAttributes.java (getAll): Genericized.
	(getIDs): Likewise.
	* javax/naming/directory/BasicAttribute.java (getAll): Fixed return
	type.
	* javax/naming/InitialContext.java: Genericized.
	(list): Likewise.
	(listBindings): Likewise.
	* javax/naming/CompoundName.java (getAll): Genericized.
	* javax/naming/CompositeName.java (getAll): Genericized.

2005-12-01  Tom Tromey  <tromey@redhat.com>

	* javax/imageio/spi/RegisterableService.java (onRegistration):
	Genericized.
	(onDeregistration): Likewise.
	* javax/imageio/spi/ServiceRegistry.java (ServiceRegistry):
	Genericized.
	(deregisterServiceProvider): Likewise.
	(getCategories): Likewise.
	(getServiceProviderByClass): Likewise.
	(getServiceProviders): Likewise.
	(lookupProviders): Likewise.
	(registerServiceProvider): Likewise.
	(registerServiceProviders): Likewise.
	(setOrdering): Likewise.
	(unsetOrdering): Likewise.
	* javax/imageio/spi/ImageOutputStreamSpi.java (outputClass):
	Genericized.
	(ImageOutputStreamSpi): Likewise.
	(getOutputClass): Likewise.
	* javax/imageio/spi/ImageInputStreamSpi.java (inputClass):
	Genericized.
	(ImageInputStreamSpi): Likewise.
	(getInputClass): Likewise.
	* javax/imageio/metadata/IIOMetadataFormatImpl.java (addAttribute):
	Genericized.
	(addObjectValue): Likewise.
	* javax/imageio/metadata/IIOMetadataFormat.java (getObjectClass):
	Genericized.
	(getObjectMaxValue): Likewise.
	(getObjectMinValue): Likewise.
	* javax/imageio/ImageIO.java (getImageReaders): Genericized.
	(getImageReadersByFormatName): Likewise.
	(getImageReadersByMIMEType): Likewise.
	(getImageTranscoders): Likewise.
	(getImageWritersByFormatName): Likewise.
	(getImageWritersByMIMEType): Likewise.
	(getImageWritersBySuffix): Likewise.
	(getImageReader): Use getOriginatingProvider.
	(getImageWriter): Likewise.